--- a/src/components/PromoBanner.css
+++ b/src/components/PromoBanner.css
@@ -1,6 +1,9 @@
 .promo-banner {
-  position: relative;
-  z-index: 200;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1001;
   background: var(--color-teal);
   color: #fff;
   display: flex;
